--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -85,6 +86,7 @@
         <script src="scripts/services/price.js"></script>
         <script src="scripts/directives/nav-bar.js"></script>
         <script src="scripts/controllers/join.js"></script>
+        <script src="scripts/services/util.js"></script>
         <!-- endbuild -->
 </body>
 </html>
