--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,7 @@
         <script src="scripts/directives/health-footer.js"></script>
         <script src="scripts/services/reasons.js"></script>
         <script src="scripts/filters/slugify.js"></script>
+        <script src="scripts/directives/contact-block.js"></script>
         <!-- endbuild -->
 </body>
 </html>
