this sucks... trying to get foundation to work properly

--- a/app/index.html
+++ b/app/index.html
@@ -126,6 +126,7 @@
         <script src="scripts/directives/contact-block.js"></script>
         <script src="scripts/services/reasons.js"></script>
         <script src="scripts/filters/slugify.js"></script>
+        <script src="scripts/directives/logo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
