changing reasons to a directive

--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,8 @@
         <script src="scripts/services/reasons.js"></script>
         <script src="scripts/filters/slugify.js"></script>
         <script src="scripts/directives/logo.js"></script>
+        <script src="scripts/directives/preloader.js"></script>
+        <script src="scripts/directives/reason.js"></script>
         <!-- endbuild -->
 </body>
 </html>
