products looking sooo good

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 
     <!-- <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic' rel='stylesheet' type='text/css'> -->
   </head>
-  <body ng-app="health3App">
+  <body ng-app="health3App" state="{{ $state.current.name }}">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -129,6 +129,7 @@
         <script src="scripts/directives/logo.js"></script>
         <script src="scripts/directives/preloader.js"></script>
         <script src="scripts/directives/reason.js"></script>
+        <script src="scripts/directives/ephemeral.js"></script>
         <!-- endbuild -->
 </body>
 </html>
