some more work done

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
         <div class="pages" ui-view></div>
       </div>
       <!-- <health-footer></health-footer> -->
+      <div class="its-a-boy"></div>
     </div>
 
 
