--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,7 @@
         <script src="scripts/directives/preloader.js"></script>
         <script src="scripts/directives/reason.js"></script>
         <script src="scripts/directives/ephemeral.js"></script>
+        <script src="scripts/services/posts.js"></script>
         <!-- endbuild -->
 </body>
 </html>
