--- a/app/index.html
+++ b/app/index.html
@@ -126,6 +126,7 @@
         <script src="scripts/directives/reason.js"></script>
         <script src="scripts/directives/ephemeral.js"></script>
         <script src="scripts/services/posts.js"></script>
+        <script src="scripts/directives/fileupload.js"></script>
         <!-- endbuild -->
 </body>
 </html>
