refactoring signup component — added factory to signup object — simplified controllers — fixed crazy validation of start form — used nested views for confirm and done steps to avoid duplicity of content

--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,7 @@
         <script src="scripts/directives/ephemeral.js"></script>
         <script src="scripts/services/posts.js"></script>
         <script src="scripts/directives/fileupload.js"></script>
+        <script src="scripts/services/signup.js"></script>
         <!-- endbuild -->
 </body>
 </html>
